# UMIE-Visual-QA

./: .bash_history  .env  .git-credentials  .gitignore  constants.py  huggingface_cli.py  llm.py  main.py  prompts.py  pyproject.toml  readme.md  utils.py  visualization.py
.codeium/database/9c0694567290725d9dcba14ade58e297/2/MODEL_EMBED_6591/: embedding_database.sqlite-shm  embedding_database.sqlite-wal
.zfunc/: _main.py
